--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -126,3 +126,13 @@ p {
 .events-nav a {
     color: #556270;
 }
+
+/* ----------------- Comments Section ----------------- */
+.comment-list {
+    padding: 10px;
+}
+
+.comment-content {
+    padding: 0px 10px 10px 10px;
+    font-size: 16px;
+}
