--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -26,6 +26,13 @@ p {
     font-size: 12px;
 }
 
+select {
+    display: inline-block!important;
+    height: auto!important;
+    color: #556270!important;
+    padding: 10px!important;
+}
+
 /* ---------------------- Container Styling ------------------------- */
 
 .nav-wrapper {
@@ -88,7 +95,7 @@ p {
     background-color: #556270;
 }
 /* -------------------------------- Group Events Card ----------------------------- */
-.card {
+.events-card {
     width: 100%!important;
 }
 
@@ -140,4 +147,17 @@ p {
 .comment-content {
     padding: 0px 10px 10px 10px;
     font-size: 16px;
+}
+
+
+
+/* -------------------------------- Create Event Form ----------------------------- */
+.form-card {
+    padding: 50px!important;
+    margin: 20px;
+}
+
+.create-event-select {
+    padding: 10px 10px 10px 10px!important;
+    margin-top: 10px!important;
 }
