--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -220,7 +220,8 @@ select {
     display: flex;
     width: 100%;
     padding: 20px;
-    margin: 0 auto;
+    margin-left: 0px!important;
+    margin-right: 0px!important;
 
 }
 
@@ -228,11 +229,20 @@ select {
     display: flex;
     justify-content:space-evenly;
     width: 100%;
+    margin: 0 auto;
 }
 
-.superlatives-input {
+.superlatives-input, .superlatives-select {
     margin-left: 0px!important;
 }
+
+.superlatives-select-input {
+    height: 30px!important;
+}
+
+
+
+
 /* -------------------------------- Create Event Form ----------------------------- */
 .create-form-row {
     display: flex;
