--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -174,6 +174,7 @@ select {
 
 .profile-card {
     background-color: #556270!important;
+    margin: 0!important;
 }
 /* -------------------------------- Group Events Card ----------------------------- */
 .events-card {
@@ -346,4 +347,51 @@ select {
     background-color: #fff!important;
     color: #556270;
     margin-top: 10px;
+}
+
+
+/* -------------------------------- 404 Page ----------------------------- */
+.error-container {
+   width: 100%;
+   height: 100%;
+   margin: 0 auto;
+   margin-top: 100px;
+}
+
+.error-title {
+    color: #556270;
+    font-size: 200px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+
+}
+
+.error-h5 {
+    color: #ffffff;
+    font-weight: 700;
+    background-color: #FA8334;
+    padding: 15px 10px 15px 10px;
+    text-align: center;
+    margin-top: 0px;
+}
+
+.error-h6 {
+    font-weight: 600;
+    font-size: 16px;
+    text-align: center;
+}
+
+.error-p {
+    font-size: 10px;
+    color: #556270;
+    text-align: center;
+}
+
+.error-signoff {
+    text-align: right;
+    font-size: 10px;
+    color: #556270;
 }
