--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -18,6 +18,10 @@ body {
 .section {
     padding: 5px 0px 2px 10px!important;
 }
+
+.card {
+    margin: 0 0 1rem 0!important;
+}
 /* --------- Fonts --------- */
 h1 {
     color: blue;
@@ -268,7 +272,7 @@ select {
 
 /* ----------------- Comments Section ----------------- */
 .comment-list {
-    padding: 10px;
+    padding: 20px 30px 20px 20px;
 }
 
 .comment-content {
@@ -291,6 +295,14 @@ select {
     width: 70%;
 }
 
+.comment-extras {
+    display: flex;
+    justify-content: space-between;
+}
+
+.moment {
+    color: #ccc;
+}
 /* ----------------- Superlatives Section ----------------- */
 .superlative-user-image {
     width: 60px!important;
